2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-03-02  Jody Goldberg <jody@gnome.org>

	* gnome-theme-manager.c (load_meta_themes) : revert the commit on
	  Wed Feb  4 00:05:11 2004  Jonathan Blandford  <jrb@gnome.org>
	  exit if it is a non-compliant wm (eg, anything but metacity)

2004-02-25  Fernando Herrera  <fherrera@onirica.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=132902
	* theme-install.glade: use GtkFileChooser.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-12  Mark McLoughlin  <mark@skynet.ie>

	* gnome-theme-details.c: (cb_dialog_response):
	* gnome-theme-installer.c: (install_dialog_response):
	* gnome-theme-manager.c: (cb_dialog_response):
	* theme-switcher.c: (install_dialog_response),
	(cb_dialog_response): Update help links to point to user-guide.xml

Sat Feb  7 00:34:45 2004  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (load_meta_themes): fix #106424

Fri Feb  6 20:49:25 2004  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-details.c (gnome_theme_details_init): Patch from
	Frederic Crozat to install themes in the right place.

Wed Feb  4 00:05:11 2004  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (load_meta_themes): exit if it is a
	non-compliant wm (eg, anything but metacity)

Tue Feb  3 23:36:25 2004  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (load_meta_themes): use
	g_markup_printf_escaped instead of g_strdup_printf, #110564

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2004-01-05  Muktha <muktha.narayan@wipro.com>

	* theme-properties.glade: Add accessible name and description.
	  Fixes bug #128377.

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1
